# unstable-modules

./: .gitignore  README.md
blobDescriptor2/include/: DescriptorThread.h  Helpers.h  Obj2D.h
blobDescriptor2/src/: DescriptorThread.cpp  Helpers.cpp  Obj2D.cpp
dummyActivityInterface/: CMakeLists.txt  dummyActivityInterface.thrift
dummyActivityInterface/app/: CMakeLists.txt
dummyActivityInterface/app/conf/: dummyActivityInterface.ini  dummy_activity_complex6_005.ini  dummy_activity_complex6_025.ini  dummy_activity_complex6_050.ini  dummy_activity_complex6_100.ini  dummy_activity_simple3_075.ini  dummy_memory_complex6.ini  dummy_memory_out_of_reach.ini  dummy_memory_rake_ham.ini  dummy_memory_tomato_rake_ham.ini  dummy_segmentation_complex6.ini  memory_simple4.ini  out_of_reach.ini  simple4.ini
dummyActivityInterface/app/scripts/: planner_sim_DATASET_adaptability.xml.template  planner_sim_DATASET_creativity+adaptability.xml.template  planner_sim_DATASET_deterministic.xml.template  planner_sim_DATASET_deterministic_noheur.xml.template  planner_sim_DATASET_h1.xml.template  planner_sim_DATASET_h1h2.xml.template  planner_sim_DATASET_h1h2h3.xml.template  planner_sim_DATASET_noheur.xml.template  planner_sim_complex6_creativity+adaptability.xml  planner_sim_complex6_creativity.xml  planner_sim_complex6_deterministic_noheur.xml  planner_sim_out_of_reach.xml  planner_sim_out_of_reach.xml.template  planner_sim_rake_ham.xml.template  planner_sim_simple3_adaptability.xml  planner_sim_simple3_deterministic.xml  planner_sim_simple3_deterministic_noheur.xml  planner_sim_simple3_noheur.xml  planner_sim_simple4.xml  planner_sim_simple4.xml.template  planner_sim_tomato_rake_ham.xml.template
dummyActivityInterface/include/: Defaults.h  DummyActivityInterfaceModule.h  DummyActivityInterfaceThread.h
dummyActivityInterface/src/: DummyActivityInterfaceMain.cpp  DummyActivityInterfaceModule.cpp  DummyActivityInterfaceThread.cpp
dummyPraxiconInterface/: CMakeLists.txt
dummyPraxiconInterface/src/: DummyPraxiconInterfaceModule.cpp
gestoosDetectorAndWhai/: CMakeLists.txt
gestoosDetectorAndWhai/config/: gestures320.ini  handGestures.ini  whai.ini
gestoosDetectorAndWhai/include/: GestoosModule.h  GestoosSupport.h  TestConfig.h
gestoosDetectorAndWhai/src/: GestoosModule.cpp  GestoosSupport.cpp  main.cpp
gestureModule/: CMakeLists.txt
gestureModule/app/scripts/: gesture.xml
gestureModule/include/: gesture.h
gestureModule/src/: gesture.cpp  main.cpp
gesturesRenderingEngine/: CMakeLists.txt  gesturesRenderingEngine.thrift
gesturesRenderingEngine/app/scripts/: sim_gesturesRenderingEngine.xml
gesturesRenderingEngine/include/: GesturesRenderingEngineDefaults.h  GesturesRenderingEngineModule.h  GesturesRenderingEngineThread.h
gesturesRenderingEngine/src/: GesturesRenderingEngineMain.cpp  GesturesRenderingEngineModule.cpp  GesturesRenderingEngineThread.cpp
objectDescriptor/: CMakeLists.txt
objectDescriptor/include/: BlobDescriptorModule.h  BlobDescriptorThread.h  Obj.h  Obj2D.h
objectDescriptor/src/: BlobDescriptorMain.cpp  BlobDescriptorModule.cpp  BlobDescriptorThread.cpp  DescriptorModule.cpp  DescriptorThread.cpp  Obj.cpp  Obj2D.cpp  main.cpp
poeticon-simulation/: CMakeLists.txt
poeticon-simulation/app/: CMakeLists.txt
poeticon-simulation/app/conf/: dummy_activity_complex6_005.ini  dummy_activity_complex6_025.ini  dummy_activity_complex6_050.ini  dummy_activity_complex6_075.ini  dummy_activity_complex6_100.ini  dummy_activity_complex6_onearm_005.ini  dummy_activity_complex6_onearm_025.ini  dummy_activity_complex6_onearm_050.ini  dummy_activity_complex6_onearm_075.ini  dummy_activity_complex6_onearm_100.ini  dummy_activity_simple3_005.ini  dummy_activity_simple3_025.ini  dummy_activity_simple3_050.ini  dummy_activity_simple3_100.ini  dummy_activity_simple3_onearm_005.ini  dummy_activity_simple3_onearm_025.ini  dummy_activity_simple3_onearm_050.ini  dummy_activity_simple3_onearm_075.ini  dummy_activity_simple3_onearm_100.ini  dummy_segmentation_simple3.ini
poeticon-simulation/app/conf/old/: dummy_activity_complex6_100.ini  dummy_activity_simple3_100.ini
poeticon-simulation/app/scripts/: planner_sim_complex6_adaptability.xml  planner_sim_complex6_noheur.xml
poeticon-simulation/dummyActivityInterface/: CMakeLists.txt  dummyActivityInterface.thrift
poeticon-simulation/dummyActivityInterface/app/conf/: dummy_activity_complex6_075.ini  dummy_activity_simple3_005.ini  dummy_activity_simple3_050.ini
poeticon-simulation/dummyActivityInterface/app/scripts/: planner_sim_DATASET_creativity.xml.template  planner_sim_simple3_creativity+adaptability.xml  planner_sim_simple3_creativity.xml
poeticon-simulation/dummyActivityInterface/include/: DummyActivityInterfaceThread.h
poeticon-simulation/dummyActivityInterface/src/: DummyActivityInterfaceThread.cpp
poeticon-simulation/dummyPraxiconInterface/include/: DummyPraxiconInterfaceModule.h
poeticon-simulation/dummyPraxiconInterface/src/: DummyPraxiconInterfaceMain.cpp
poeticon-simulation/src/: CMakeLists.txt
poeticon-simulation/src/dummyActivityInterface/: CMakeLists.txt  dummyActivityInterface.thrift
poeticon-simulation/src/dummyActivityInterface/include/: Defaults.h  DummyActivityInterfaceModule.h  DummyActivityInterfaceThread.h
poeticon-simulation/src/dummyActivityInterface/src/: DummyActivityInterfaceMain.cpp  DummyActivityInterfaceModule.cpp  DummyActivityInterfaceThread.cpp
poeticon-simulation/src/dummyPraxiconInterface/: CMakeLists.txt
poeticon-simulation/src/dummyPraxiconInterface/src/: DummyPraxiconInterfaceModule.cpp
tooldemo/: CMakeLists.txt  tooldemo.thrift
tooldemo/app/scripts/: tooldemo.xml
tooldemo/include/: ToolDemoModule.h
tooldemo/src/: ToolDemoMain.cpp  ToolDemoModule.cpp
whaiHandTracker/: CMakeLists.txt
whaiHandTracker/app/conf/: whaiHandTracker.ini
whaiHandTracker/cmake/: FindGestoos.cmake
whaiHandTracker/include/: WhaiHandTrackerModule.h  WhaiHandTrackerSupport.h
whaiHandTracker/src/: WhaiHandTrackerMain.cpp  WhaiHandTrackerModule.cpp  WhaiHandTrackerSupport.cpp
(+4 files in other folders)
